--- a/index.html
+++ b/index.html
@@ -8,9 +8,71 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <link href="css\login.css" rel="stylesheet">
   </head>
-  <body>
-      
+  <body class="bg-color-home">
+      <div class="container text-center">
+        <header>
+          <img class="mb-4" src="https://upload.wikimedia.org/wikipedia/commons/8/86/Senac_logo.svg" alt="" width="300" height="130">
+          <h1>Bem vindo ao sistema</h1>
+        </header>
+        <fieldset>
+          <form class="form-signin" action="php/admin.php" method="post">
+            <h1 class="h3 mb-3 font-weight-normal">Entrar</h1>
+            <div class="form-group">
+              <label for="inputLogin" class="sr-only">Email address</label>
+              <input type="text" id="inputLogin" name="txtLogin" class="form-control" placeholder="Login" required autofocus>
+            </div>
+            <div class="form-group">
+              <label for="inputPassword" class="sr-only">Password</label>
+              <input type="password" id="inputPassword" name="txtPassword" class="form-control" placeholder="Password" required>
+            </div>
+            <div class="mb-3">
+              <label>
+                <a href="#" class="badge badge-warning" data-toggle="modal" data-target="#exampleModalCenter">Registrar-se</a>
+              </label>
+            </div>
+            <button formnovalidate class="btn btn-lg btn-dark btn-block" type="submit">Sign in</button>
+            <p class="mt-5 mb-3">&copy; 2018 Projeto Base<br>All Rights Reserved</p>
+          </form>
+        </fieldset>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle" class="text-center" style="color: #000">Registro</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body text-dark">
+                <fieldset>
+                  <form action="php/admin.php" method="post">
+                    <div class="form-group">
+                      <label for="idNome" class="sr-only">Nome:</label>
+                      <input type="text" class="form-control" id="idNome" name="txtNome" placeholder="Informe o nome" required>
+                    </div>
+                    <div class="form-group">
+                      <label for="idEmail" class="sr-only">Email:</label>
+                      <input type="email" class="form-control" id="idEmail" name="txtEmail" placeholder="Informe o email" required>
+                    </div>
+                    <div class="form-group">
+                      <label for="idSenha" class="sr-only">Senha:</label>
+                      <input type="password" class="form-control" id="idSenha" name="txtSenha" placeholder="Informe a senha" required>
+                    </div>
+                  </form>
+                </fieldset>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                <button type="button" class="btn btn-dark">Registrar!</button>
+              </div>
+            </div>
+          </div>
+        </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
